# concrete_calcs

./: .gitignore  ACI318_19_Capacity_Calcs.ipynb  README.md  README_add_collapsible_headings.md  add_collapsible_headings.py  main.py  member_capacity_calcs.ipynb  pyproject.toml  shear_moment_diagram.ipynb
.ipynb_checkpoints/: shear_moment_diagram-checkpoint.ipynb
data/: export_with_collapsible.ps1
python/: ACI318_19_Capacity_Calcs.ipynb  Old_Moment_Calcs.ipynb
tools/: export_with_collapsible.ps1  readme_for_.ps1.md
