[project]
name = "concrete-calcs"
version = "0.1.0"
description = "Project folder for concrete related calculations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "plotly>=6.3.1",
    "uv>=0.9.3",
]
